--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  Last Published: Tue Oct 29 2024 15:41:26 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html>
 <html data-wf-page="67095281a279ab2be23b7e81" data-wf-site="646f62c3533c566ba80c92ec">
 <head>
   <meta charset="utf-8">
@@ -23,55 +23,6 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
-  <script>
-(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-ga('create', 'UA-166992321-1', 'auto');
-ga('send', 'pageview');
-</script>
-  <script>
-ga(function(){
-  ga_trackers=[];
-  ga.getAll().forEach(function(x,i){
-  ga_trackers.push(x.get('name'))});
-  ga_trackers.forEach(
-  function(gaName){
-    ga(gaName + '.require', 'Clearbit', {"mapping":{
-      "type":"dimension1",
-      "companyName":"dimension2", 
-      "companyDomain":"dimension3",
-      "companyType":"dimension4",
-      "companySector":"dimension5",
-      "companyIndustryGroup":"dimension6",
-      "companyIndustry":"dimension7", 
-      "companySubIndustry":"dimension8", 
-      "companySicCode":"dimension9",
-      "companyNaicsCode":"dimension10",
-      "companyCountry":"dimension11",
-      "companyState":"dimension12",
-      "companyCity":"dimension13",
-      "companyFunding":"dimension14",
-      "companyEstimatedAnnualRevenue":"dimension15", 
-      "companyEmployeesRange":"dimension16",
-      "companyEmployees":"dimension17", 
-      "companyAlexaRank":"dimension18"}
-    });
-  });
-});
-</script>
-  <script async="" src="https://ga.clearbit.com/v1/ga.js?authorization=pk_b516cb641ce5fb4711b21233605f27f1">
-</script>
-  <script type="text/javascript">
-  (function (d, u, h, s) {
-    h = d.getElementsByTagName('head')[0];
-    s = d.createElement('script');
-    s.async = 1;
-    s.src = u + new Date().getTime();
-    h.appendChild(s);
-  })(document, 'https://grow.clearbitjs.com/api/pixel.js?k=pk_b516cb641ce5fb4711b21233605f27f1&v=');
-</script>
 </head>
 <body class="body-4">
   <section class="section-21"><img src="images/hires_notion_announcement.png" loading="lazy" width="Auto" sizes="(max-width: 479px) 60vw, (max-width: 767px) 280px, 400px" alt="An image of the Aquarium logo and the Notion logo with a plus sign between them." srcset="images/hires_notion_announcement-p-500.png 500w, images/hires_notion_announcement-p-800.png 800w, images/hires_notion_announcement-p-1080.png 1080w, images/hires_notion_announcement.png 1690w" class="announcement_image"></section>
