--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Redirect To Homepage</title>
     <script type="text/javascript">
-      window.location.replace(l.protocol + '//' + window.location.hostname);
+      window.location.replace(window.location.protocol + '//' + window.location.hostname);
     </script>
   </head>
   <body>
